--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="30dp"
     tools:context=".HomeActivity">
 
     <Button
@@ -11,7 +12,9 @@
         android:layout_height="wrap_content"
         android:text="QR Scan"
         android:id="@+id/scanQR"/>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +37,7 @@
             android:layout_marginBottom="20dp"
             android:text="장바구니목록" />
     </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
